<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.anastasiazhukova.backend.Registration.RegistrationActivity">

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="488dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView_FirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_first_name"/>

        <EditText
            android:id="@+id/editText_FirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            />

        <TextView
            android:id="@+id/textView_LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_last_name"/>

        <EditText
            android:id="@+id/editText_LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/textView_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_email"/>

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress|textPersonName"
            />

        <TextView
            android:id="@+id/textView_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_password"/>

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/input_password_hint"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
    </LinearLayout>
</LinearLayout>
